fixed error gap

--- a/blocks/popup/__input/__input-error/popup__input-error.css
+++ b/blocks/popup/__input/__input-error/popup__input-error.css
@@ -1,4 +1,5 @@
 .popup__input-error {
+  display: block;
   min-height: 35px;
   height: 100%;
   margin: 0;
